# ipol-demorunner

./: .woodpecker.yml  Cargo.toml  Rocket.toml  flake.nix
src/: compilation.rs  config.rs  execution.rs  main.rs  model.rs  ping.rs  shutdown.rs  workload.rs
src/model/: demoid.rs  runkey.rs
