[package]
name = "ipol-demorunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
git2 = "0.18"
zip = "0.6"
tar = "0.4"
bollard = "0.15"
futures-util = "0.3"
serde_json = "1.0"
scopeguard = "1.1"
thiserror = "1"
regex = "1"
lazy_static = "1.4"
tempfile = "3.3"
chrono = "0.4"
walkdir = "2.3"
safe-path = "0.1"
secrecy = { version = "0.8", features = ["alloc", "serde"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
once_cell = "1.15"

[dependencies.rocket]
version = "=0.5.0-rc.4"
features = ["json"]

